--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="container">
     <!-- Page 1: Inputs -->
     <section id="page1" class="page active card">
-      <h2>สับเปบี่ยน LTF ไป TESGX ดีไหม?</h2>
+      <h2>สับเปลี่ยน LTF ไป TESGX ดีไหม?</h2>
       <div class="field">
         <label for="ltfValue">วงเงินย้ายจาก LTF</label>
         <input type="text" id="ltfValue" placeholder="0.00" />
