--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -29,6 +28,14 @@
       color: #fff;
       border-color: var(--primary);
     }
+    .field select {
+      width: 100%;
+      padding: 0.6rem;
+      font-size: 1rem;
+      font-family: var(--font);
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
@@ -38,21 +45,11 @@
       <h2>สับเปลี่ยน LTF ไป TESGX ดีไหม?</h2>
       <div class="field">
         <label for="ltfValue">วงเงินย้ายจาก LTF</label>
-        <input
-          type="text"
-          id="ltfValue"
-          placeholder="0.00"
-          inputmode="decimal"
-        />
+        <input type="text" id="ltfValue" placeholder="0.00" inputmode="decimal" />
       </div>
       <div class="field">
         <label for="returnPct">ผลตอบแทนช่วง 5 ปี (%)</label>
-        <input
-          type="text"
-          id="returnPct"
-          placeholder="0.00"
-          inputmode="decimal"
-        />
+        <input type="text" id="returnPct" placeholder="0.00" inputmode="decimal" />
         <div class="sign-toggle">
           <button type="button" id="signPos" class="sign-btn active">＋</button>
           <button type="button" id="signNeg" class="sign-btn">−</button>
@@ -64,12 +61,26 @@
     <!-- Page 2: Table & IRR -->
     <section id="page2" class="page card">
       <h2>ผลลัพธ์</h2>
+
+      <div class="field">
+        <label for="taxBracket">ฐานภาษีของท่าน</label>
+        <select id="taxBracket">
+          <option value="0.05">เงินได้สุทธิ 150,001 - 300,000 (5%)</option>
+          <option value="0.10">เงินได้สุทธิ 300,001 - 500,000 (10%)</option>
+          <option value="0.15">เงินได้สุทธิ 500,001 - 750,000 (15%)</option>
+          <option value="0.20">เงินได้สุทธิ 750,001 - 1,000,000 (20%)</option>
+          <option value="0.25" selected>เงินได้สุทธิ 1,000,001 - 2,000,000 (25%)</option>
+          <option value="0.30">เงินได้สุทธิ 2,000,001 - 5,000,000 (30%)</option>
+          <option value="0.35">เงินได้สุทธิ 5,000,000 ขึ้นไป (35%)</option>
+        </select>
+      </div>
+
       <table id="deductionTable">
         <thead>
           <tr>
             <th>ปี</th>
             <th>ยอดลดหย่อน (฿)</th>
-            <th>ลดหย่อนภาษี (30%)</th>
+            <th>ลดหย่อนภาษี</th>
           </tr>
         </thead>
         <tbody></tbody>
